@@ -1,5 +1,8 @@
 <?php
 defined('TYPO3_MODE') || die('Access denied.');
+if (!defined ('AGENCY_EXT')) {
+    define('AGENCY_EXT', 'agency');
+}
 
 $table = 'tt_content';
 
