@@ -1,23 +1,16 @@
 <?php
 defined('TYPO3_MODE') || die('Access denied.');
 
-$emClass = '\\TYPO3\\CMS\\Core\\Utility\\ExtensionManagementUtility';
+call_user_func(function () {
 
-if (
-    TYPO3_MODE == 'BE'
-) {
-    call_user_func($emClass . '::addStaticFile', AGENCY_EXT, 'Configuration/TypoScript/PluginSetup/', 'Agency Registration');
-}
+    \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::allowTableOnStandardPages( 'fe_groups_language_overlay');
+    \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addToInsertRecords( 'fe_groups_language_overlay');
 
-call_user_func($emClass . '::allowTableOnStandardPages', 'fe_groups_language_overlay');
-call_user_func($emClass . '::addToInsertRecords', 'fe_groups_language_overlay');
-
-if ( // Direct Mail tables exist but Direct Mail shall not be used
-    $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][AGENCY_EXT]['enableDirectMail'] &&
-    !call_user_func($emClass . '::isLoaded', 'direct_mail')
-) {
-    call_user_func($emClass . '::allowTableOnStandardPages', 'sys_dmail_category');
-    call_user_func($emClass . '::addToInsertRecords', 'sys_dmail_category');
-}
-
-
+    if ( // Direct Mail tables exist but Direct Mail shall not be used
+        $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][AGENCY_EXT]['enableDirectMail'] &&
+        !\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::isLoaded('direct_mail')
+    ) {
+        \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::allowTableOnStandardPages( 'sys_dmail_category');
+        \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addToInsertRecords)'sys_dmail_category');
+    }
+});
