@@ -1,3 +1,6 @@
+2020-02-18 Franz Holzinger  <franz@ttproducts.de>
+    * bugfix: Error in the check if a field has already been added to the $TCA by another extension
+
 2019-07-27 Franz Holzinger  <franz@ttproducts.de>
     * bugfix: Non-static method JambageCom\Agency\Api\System::login
 
